OPenshift/Templates/Deployment.yaml
apiVersion: "apps.openshift.io/v1"
kind: "DeploymentConfig"
metadata:
  labels:
    app: "spring-petclinic"
  name: "spring-petclinic"
spec:
  replicas: 2
  selector:
    app: "spring-petclinic"
    deploymentconfig: "spring-petclinic"
  strategy:
    type: "Rolling"
  template:
    metadata:
      labels:
        app: "spring-petclinic"
        deploymentconfig: "spring-petclinic"
    spec:
      containers:
        - name: "spring-petclinic"
          image: "springcommunity/spring-framework-petclinic"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
              protocol: "TCP"
  triggers:
    - type: "ConfigChange"
