OPenshift/Templates/Service.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "spring-petclinic-service"
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: "spring-petclinic"
