OPenshift/Templates/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: "spring-petclinic-route"
spec:
  to:
    kind: Service
    name: spring-petclinic-service
